Rate Limiting and caching, Security Hardening (Input sanitization with bleach, HTTPS enforcement, and Trusted host)

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,3 +11,10 @@ pytest
 httpx
 pytest-asyncio
 pydantic-settings
+slowapi
+cachetools
+passlib[bcrypt]
+python-multipart
+python-dateutil
+google-auth
+bleach
