Mobile Responsiveness & PWA Implementation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,21 @@
-OPENAI_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxxxxx
+# =============================================================================
+# MOMENTRA BACKEND - ENVIRONMENT CONFIGURATION
+# =============================================================================
+# Copy this file to .env and fill in your real keys.
+# DO NOT commit the .env file to version control.
+
+# Core Secrets
+OPENAI_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+DATABASE_URL=postgresql://user:password@localhost:5432/dbname
+
+# Environment (development, production, test)
+ENVIRONMENT=development
+
+# Security
+# Set to True in production to force HTTPS redirects
+ENFORCE_HTTPS=False
+# List of allowed hostnames (comma separated strings)
+ALLOWED_HOSTS=["localhost", "127.0.0.1", "0.0.0.0"]
+
+# Auth
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
